2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-01-29  Mike McCormack

        * Convert fd list to inlist to save allocs

2011-01-29  Rui Miguel Silva Seabra

        * make https not fail (that's curl's responsibility, really).

2011-01-31  Carsten Haitzler (The Rasterman)

        * Fix: ecore-evas CAN send "render done" messages even if not
        waiting for sync counter when using gl engine. new semi-sync
        mode to account for that.